--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>Virzity</strong> <span></span></a>
 						<nav>
-							 <a href="#" class="btn">Home</a>
+							 <a href="index.html" class="btn">Home</a>
                               <a href="about.html" class="btn">About Us</a>
                               <a href="#" class="btn">Register</a>
     
