--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<a href="index.html" class="logo"><strong>Virzity</strong> <span></span></a>
 						<nav>
 							 <a href="index.html" class="btn">Home</a>
-                              <a href="about.html" class="btn">About Us</a>
+                              <a href="about.html" class="btn">About</a>
                               <a href="#" class="btn">Register</a>
     
                             
