--- a/Clothes.html
+++ b/Clothes.html
@@ -19,7 +19,7 @@
 						<nav>
 							 <a href="index.html" class="btn">Home</a>
                               <a href="about.html" class="btn">About</a>
-                              <a href="#" class="btn">Register</a>
+                               <a href="javascript:void( window.open( 'https://form.jotform.com/72258204044146', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) ) " class="btn">Register</a>
 						</nav>
 					</header>
                 
