--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 						<nav>
 							 <a href="index.html" class="btn">Home</a>
                               <a href="about.html" class="btn">About</a>
-                              <a href="#" class="btn">Register</a>
+                               <a href="javascript:void( window.open( 'https://form.jotform.com/72258204044146', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) ) " class="btn">Register</a>
 						</nav>
 					</header>
 
@@ -42,7 +42,7 @@
 							<div class="content">
 								<p>Our mission is to create a central location for entrepreneurs to grow and consumers to buy. Virzity allows college business owners to advertise their product to a larger audience by giving them an online platform to showcase their product or service. By creating a growing catalog of college business, consumers have the opportunity to search through the many businesses collaborating with us in order to find the perfect product or service for them. For students. By students Virzity</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="index.html" class="button next scrolly">Get Started</a></li>
 								</ul>
 							</div>
 						</div>
